# ida4sims-cli

./: .gitignore  README.md  cahnge_this_to_upload.py  check_if_dataset_contains_file.py  create_dataset.py  delete_uploaded_dataset_id.py  generate_token.py  get_dataset_content.py  get_session.py  lexis_download.py  logout.py  main.py  pyproject.toml  requirements.txt  setup.py  upload_dataset.py  upload_files.py
functions/: LexisAuthManager.py  check_if_dataset_contains_directory.py  check_if_dataset_contains_file.py  create_dataset.py  delete_dataset_id.py  get_dataset_content.py  get_session.py  list_directory_contents.py  sync_directory_contents.py  upload_dataset_content.py  upload_files.py
helpers/: default_data.py
src/ida4sims_cli/: get_all_datasets.py  get_dataset_content.py  get_dataset_hashes.py  logout.py  upload_dataset.py
src/ida4sims_cli/functions/: LexisAuthManager.py  create_dataset.py  delete_dataset_id.py  get_local_directory_size.py  hashing_utils.py  sync_directory_contents.py  upload_dataset_content.py  utils.py
src/ida4sims_cli/helpers/: creators.py  default_data.py
tests/: test_get_dataset_hashes_export.py  test_get_dataset_hashes_formatting.py  test_hashing.py
tests/integration/: test_hashing_integration.py
