[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida4sims-cli"
version = "0.1.1"
description = "cli uploads of datasets to the LEXIS platform using the py4lexis library and custom IDA4SIMS modifications"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Pylat Nestor", email = "pylat.nestor@vsb.cz"},
    {name = "David Číž", email = "david.ciz@vsb.cz"},
    {name = "Radek Furmánek", email = "radek.furmanek@vsb.cz"}
]
# Dependencies should be an array of strings in PEP 508 format
dependencies = [
    "pandas",
    "click",
    "py4lexis",
    "keyring",
    "keyrings.alt"
]

[project.scripts]
ida-upload-dataset = "ida4sims_cli.upload_dataset:cli"  # Your main entry point
ida-logout = "ida4sims_cli.logout:main"  # Logout entry point
py4lexis-get-datasets = "ida4sims_cli.py4lexis_get_datasets:main"  # Get datasets using py4lexis CLI

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ida4sims_cli", "ida4sims_cli.functions", "ida4sims_cli.helpers"]

# For handling the Git dependency with setuptools
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
